--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,12 @@
 			<version>3.3.0</version>
 			<type>maven-plugin</type>
 		</dependency>
+
+		<dependency>
+			<groupId>org.apache.zookeeper</groupId>
+			<artifactId>zookeeper</artifactId>
+			<version>3.7.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
