--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -22,10 +22,10 @@ jobs:
         cache: maven
         
     - name: Stop Running Spring Boot Application
-      run: sudo kill -9 `sudo lsof -t -i:8080`
+      run: z
         
     - name: Build with Maven
       run: mvn clean install
       
     - name: Start web
-      run: cd target/ && sudo java -jar flip.flop-0.0.1-SNAPSHOT.jar
+      run: cd target/ && sudo nohup java -jar flip.flop-0.0.1-SNAPSHOT.jar &
